--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "moment": "^2.24.0",
+    "moviedb": "^0.2.10",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vuetify": "^1.5.5"
+    "vuetify": "^1.5.16",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
