--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "google-books-search": "^0.3.1",
     "moment": "^2.24.0",
     "moviedb": "^0.2.10",
     "vue": "^2.5.2",
