--- a/package.json
+++ b/package.json
@@ -72,7 +72,8 @@
     "vuetify-loader": "^1.0.5",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^3.4.1",
-    "webpack-dev-server": "^3.7.2",
+    "webpack-cli": "^3.3.6",
+    "webpack-dev-server": "^2.9.7",
     "webpack-merge": "^4.1.0"
   },
   "browserslist": [
